Update UnweightedGraph.java
Added stubs for lab methods that need to be implemented